<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocialWatch</string>
    <string name="login_activity_title">Login to SocialWatch</string>
    <string name="action_settings">Settings</string>
    <string name="help_me_button_text">Help!</string>
    <string name="help_me_button_cancel_text">I\'m okay</string>
    <string name="help_you_button_text">Help Someone</string>
    <string name="help_me_base_url">http://private-4ab7b-socialwatch.apiary-mock.com</string>
    <string name="help_you_base_url">http://private-4ab7b-socialwatch.apiary-mock.com</string>
    <string name="login_base_url">http://private-4ab7b-socialwatch.apiary-mock.com</string>
    <string name="help_me_request_url">/help/me</string>
    <string name="help_me_update_url">/help/me</string>
    <string name="help_me_cancel_url">/help/me</string>
    <string name="help_you_anyone_need_help_url">/help/search</string>
    <string name="login_url">/user</string>
    <string name="help_you_will_help_url">/help/you</string>
    <string name="help_you_update_url">/help/you</string>
    <string name="help_you_get_event_url">/event/</string>
    <string name="log_in_button_text">Log in</string>
    <string name="login_assist_button_text">Assist Test</string>
    <string name="extra_user_id">EXTRA_USER_ID</string>
    <string name="extra_event_id">EXTRA_EVENT_ID</string>
    <string name="exit_app_title">Exit App</string>
    <string name="exit_app_message">Are you sure you would like to exit the app?</string>
    <string name="exit_app_yes_button">Yes</string>
    <string name="exit_app_no_button">No</string>
    <string name="progress_dialog_default_title">Please wait</string>
    <string name="progress_dialog_default_message">Retrieving data now</string>
    <string name="log_in_text">Log in</string>
    <string name="email_log_in_text">Email</string>
    <string name="password_log_in_text">Password</string>
    <string name="confirm_password_register_text">Confirm password</string>
    <string name="register_text">Register</string>
    <string name="register_button_text">Register</string>
    <string name="email_hint">example@something.com</string>

</resources>
